--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -141,7 +141,7 @@
 <body>
 	<div>
 		<div id="head">
-			<a href="#" onclick="showAbout()">帮助</a> <a href="#" onclick="reset()">重置</a> 
+			<a href="#" onclick="showAbout()">帮助</a> <a href="#" onclick="reset()">重置</a> <a href="#" onclick="alert('即将上线')">添加</a>
 		</div>
 		<div id="logo">Simple</div>
 		<div id="trashContainer">
@@ -174,7 +174,7 @@
 				<li no="7"><a href="http://www.jd.com" target="_blank"
 					style="background: url(img/defaultIcon.png) no-repeat 0px -192px">京
 						东</a></li>
-				<li no="8"><a href="http://www.yixun.com" target="_blank"
+				<li no="8"><a href="http://www.yhd.com" target="_blank"
 					style="background: url(img/defaultIcon.png) no-repeat 0px -224px">1号店</a></li>
 				<li no="9"><a href="http://www.tmall.com" target="_blank"
 					style="background: url(img/defaultIcon.png) no-repeat 0px -256px">天
