--- a/WebContent/360.html
+++ b/WebContent/360.html
@@ -5,156 +5,13 @@
 <!--[if IE 6 ]></base><![endif]-->
 
 <style type="text/css">
-body,ul,form {
+body,ul{
 	margin: 0;
 	padding: 0
 }
 
 ul {
 	list-style: none
-}
-
-.placeholder {
-	color: #999
-}
-
-
-
-
-
-#mysite ::-webkit-input-placeholder {
-	color: #c8c8c8
-}
-
-#mysite input:-moz-placeholder {
-	color: #c8c8c8
-}
-
-#mysite .placeholder {
-	color: #c8c8c8
-}
-
-#mysite .arrow {
-	width: 16px;
-	height: 16px;
-	position: absolute;
-	right: -18px;
-	top: 3px
-}
-
-#mysite .arrow .border,#mysite .arrow .bg {
-	display: block;
-	overflow: hidden;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 0;
-	height: 0;
-	line-height: 0
-}
-
-#mysite .arrow .border {
-	z-index: 2;
-	border-width: 8px
-}
-
-#mysite .arrow .bg {
-	z-index: 3;
-	border-width: 8px
-}
-
-#mysite .arrow-left .border,#mysite .arrow-left .bg {
-	border-style: dashed dashed dashed solid
-}
-
-#mysite .arrow-left .border {
-	border-color: transparent transparent transparent #ebeced
-}
-
-#mysite .arrow-left .bg {
-	left: -1px;
-	border-color: transparent transparent transparent #f4f4f4
-}
-
-#mysite .mysite-custom .subtitle {
-	margin-top: 13px
-}
-
-#mysite .edit-mysite {
-	padding-left: 0;
-	padding: 0 0 16px 6px;
-	border-top: 1px solid #d2d2d2
-}
-
-#mysite .edit-mysite li {
-	display: inline;
-	float: left;
-	padding: 0 6px 0 7px;
-	width: 110px;
-	height: 18px;
-	margin-top: 12px
-}
-
-#mysite .edit-mysite .item {
-	overflow: hidden;
-	position: relative;
-	width: 97.9%;
-	height: 18px;
-	background: white
-}
-
-#mysite .edit-mysite .site {
-	display: inline-block;
-	position: relative;
-	left: 0;
-	overflow: hidden;
-	max-width: 68px;
-	line-height: 19px;
-	font-size: 14px;
-	padding: 1px 0 0 22px;
-	vertical-align: top;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	text-align: left
-}
-
-#mysite .edit-mysite .site span {
-	font-size: 14px
-}
-
-#mysite .edit-mysite .site .favicon {
-	position: absolute;
-	top: 2px;
-	left: 2px;
-	width: 16px;
-	height: 16px
-}
-
-#mysite .edit-mysite .btn-add-site {
-	display: none
-}
-
-#mysite .edit-mysite .delete-site {
-	overflow: hidden;
-	display: inline-block;
-	margin-left: -1px;
-	width: 18px;
-	height: 19px;
-	text-indent: -99em;
-	background-position: 4px -56px
-}
-
-#mysite .edit-mysite .delete-site:hover {
-	background-position: 4px -78px
-}
-
-#mysite .mysite-list-null {
-	display: none;
-	height: 46px;
-	line-height: 46px;
-	text-align: center;
-	border-top: 1px solid #d2d2d2;
-	color: #999
 }
 
 #mysite {
@@ -165,80 +22,12 @@ ul {
 	left: 50%;
 	margin-left: -500px;
 	width: 998px;
-	background: #f4f4f4
-}
-
-#mysite .left {
-	float: left;
-	position: relative;
-	z-index: 2;
-	width: 248px
-}
-
-#mysite .right {
-	float: right;
-	position: relative;
-	z-index: 1;
-	width: 748px;
-	border-left: solid 1px #ebeced;
-	background: #fff;
-	overflow: hidden
-}
-
-#mysite .subtitle {
-	position: relative;
-	height: 22px;
-	text-align: right;
-	color: #3dae0e;
-	font-weight: normal;
-	font-size: 14px;
-	padding-right: 10px
-}
-
-#mysite .mysite-title .right {
-	height: 43px;
-	line-height: 44px;
 	background: #f4f4f4;
-	overflow: hidden
-}
-
-#mysite .mysite-title .title {
-	color: #333;
-	display: inline;
-	padding: 0 12px 0 20px;
-	font-size: 14px
-}
-
-#mysite .mysite-title .intro {
-	color: #999;
-	font-size: 12px
-}
-
-#mysite .mysite-title .intro a {
-	color: #47b702;
-	text-decoration: underline
-}
-
-#mysite .mysite-title .intro a:hover {
-	color: #f00
-}
-
-#mysite .mysite-add .subtitle {
-	margin-top: 20px
-}
-
-#mysite .mysite-add .form {
 	position: relative;
-	height: 60px;
-	border-top: 1px dotted #f2f2f2
-}
-
-#mysite .mysite-add fieldset {
-	padding-top: 15px
-}
-
-#mysite .mysite-add legend {
-	display: none
+	height: auto !important;
+	min-height: 400px;
+	height: 400px
+	
 }
 
 #mysite .mysite-add .txt {
@@ -248,9 +37,6 @@ ul {
 	font-size: 14px
 }
 
-#mysite .mysite-add .txt-url {
-	margin-left: 20px
-}
 
 #mysite .mysite-add .site-input {
 	float: left;
@@ -259,7 +45,8 @@ ul {
 	border-width: 1px;
 	border-style: solid;
 	border-color: #3faf0f;
-	background: #fff
+	background: #fff;
+	margin-right: 20px
 }
 
 #mysite .mysite-add .site-input input {
@@ -275,9 +62,6 @@ ul {
 	-webkit-appearance: none
 }
 
-#mysite .mysite-add .site-input-error {
-	border-color: #de5c5c
-}
 
 #mysite .mysite-add .site-url {
 	width: 225px
@@ -308,100 +92,6 @@ ul {
 	color: #fff
 }
 
-#btn-site-add.hover,#btn-site-add.mousedown {
-	background-color: #40aa00
-}
-
-#mysite  {
-	border-top: 1px dotted #f2f2f2
-}
-
-#mysite  .subtitle {
-	margin-top: 17px
-}
-
-#mysite  .tab {
-	float: right;
-	width: 120px;
-	margin-top: 10px;
-	padding-right: 10px
-}
-
-#mysite  .tab li {
-	cursor: pointer;
-	height: 26px;
-	line-height: 26px;
-	color: #666;
-	text-align: right;
-	padding-right: 8px;
-	margin-top: 8px
-}
-
-#mysite  .tab li.cur a {
-	background: #e0e0e0;
-	font-weight: bold
-}
-
-#mysite  .tab li a {
-	position: relative;
-	color: #666;
-	zoom: 1;
-	display: inline-block;
-	padding: 0 8px;
-	font-size: 14px
-}
-
-#mysite  .tab li.hover a {
-	background: #e9e9e9
-}
-
-#mysite  .tab li a:hover {
-	text-decoration: none;
-	color: #666
-}
-
-#mysite   {
-	position: relative;
-	height: auto !important;
-	min-height: 400px;
-	height: 400px
-}
-
-#mysite   .reco {
-	margin-top: -1px
-}
-
-#mysite   .loading {
-	display: none;
-	position: absolute;
-	top: 140px;
-	left: 50%;
-	margin: -9px 0 0 -36px;
-	color: #c8c8c8
-}
-
-#mysite   .line {
-	border-top: dotted 1px #f2f2f2;
-	padding: 13px 0 0 17px;
-	margin-bottom: 6px
-}
-
-#mysite   .title {
-	display: inline;
-	color: #333;
-	padding-right: 18px;
-	line-height: 20px
-}
-
-#mysite   .title .cont {
-	position: relative;
-	font-size: 14px
-}
-
-#mysite   .split {
-	color: #3dae0d
-}
-
 #mysite   ul {
 	margin-left: 15px;
 	margin-bottom: 13px
@@ -412,79 +102,6 @@ ul {
 	float: left;
 	width: 106px;
 	height: 20px
-}
-
-#mysite   li a {
-	position: relative;
-	padding-left: 20px;
-	font-size: 14px;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	background-position: 3px -17px;
-	zoom: 1
-}
-
-#mysite   li a:hover {
-	text-decoration: none;
-	color: #f60;
-	background-position: 0 -223px
-}
-
-#mysite   li.add-success a,#mysite   li.add-success a:hover
-	{
-	background-position: -160px -177px;
-	color: #999
-}
-
-#mysite .js-tips {
-	position: absolute;
-	top: 0;
-	right: 0;
-	z-index: 20;
-	width: 748px;
-	height: 0
-}
-
-#mysite  .tips-reco {
-	top: -2px;
-	right: 0;
-	border: 1px solid #fce3bf;
-	background-color: #fffbdb
-}
-
-#mysite  .tips-reco::before,#mysite  .tips-reco .arrow-border
-	{
-	border-color: transparent #fce3bf transparent transparent
-}
-
-#mysite  .tips-reco::after,#mysite  .tips-reco .arrow-background
-	{
-	border-color: transparent #fffbdb transparent transparent
-}
-
-#mysite  .tips-reco .cont {
-	color: #f60;
-	padding: 0
-}
-
-#mysite  .show {
-	display: block
-}
-
-#mysite .close-mysite {
-	overflow: hidden;
-	position: absolute;
-	top: 8px;
-	right: 9px;
-	z-index: 20;
-	width: 24px;
-	height: 24px;
-	text-indent: -99em;
-	background-position: -151px 0
-}
-
-#mysite .close-mysite:hover {
-	background-position: -151px -30px
 }
 
 .mysite-suggest {
@@ -525,13 +142,6 @@ ul {
 	background-color: #f2f8ff
 }
 
-.mysite-list .btn,#mysite-section .btn,#mysite-section .tips-reco-site .btn-reco-site,#mysite .btn,#mysite .error .cont,#mysite .success .cont,.mysite-guide,  li a
-	{
-	background-image:
-		url(http://p5.qhimg.com/d/inn/6dcbd72c/t018ae555797fa5e95f.png);
-	background-repeat: no-repeat
-}
-
 .mask-panel{
 	position: fixed;
 	top: 0;
@@ -543,25 +153,15 @@ ul {
 	z-index: 400;
 	background-color: #666
 }
-
-
-</style>
-<script async="" src="http://b.scorecardresearch.com/beacon.js"></script>
-
-<!-- case ie version; -->
-<style type="text/css">
 </style>
 </head>
 <body class="standard">
 	111
-	<div class="front-view" id="doc-view-front">
 		<div id="mysite" class="">
 			<div class="mysite-add gclearfix">
 				<div class="form">
-					<form>
 						<div class="txt">网站名称：</div>
 						<div class="site-input site-name">
-
 							<input type="text" name="sitename" id="mysite-name-add"
 								placeholder="如：Simple" autocomplete="off" qsuginited="1">
 						</div>
@@ -573,15 +173,11 @@ ul {
 								qsuginited="1">
 						</div>
 						<button id="btn-site-add" type="submit">添加</button>
-					</form>
 				</div>
 			</div>
-			<a href="" class="btn close-mysite" title="关闭">关闭</a>
 		</div>
-
 		<div class="mask-panel"></div>
-
-		<div class="front-view" id="outer-extra">
+		<div>
 			<ul class="mysite-suggest" id="mysite-name-suggest"
 				style="position: absolute; top: 250px; left: 481px; width: 499px; z-index: 430; visibility: visibility;"
 				width="499">
@@ -589,26 +185,11 @@ ul {
 					<div class="sug-url" data-text="www.kt51.com">www.kt51.com</div></li>
 				<li><div class="sug-name" data-text="当当电器城">当当电器城</div>
 					<div class="sug-url" data-text="3c.dangdang.com">3c.dangdang.com</div></li>
-				<li><div class="sug-name" data-text="嘟嘟动漫">嘟嘟动漫</div>
-					<div class="sug-url" data-text="www.ddcomic.com">www.ddcomic.com</div></li>
-				<li><div class="sug-name" data-text="我们知道的电台">我们知道的电台</div>
-					<div class="sug-url" data-text="www.weknow.cn">www.weknow.cn</div></li>
-				<li><div class="sug-name" data-text="青岛东大皮肤医院">青岛东大皮肤医院</div>
-					<div class="sug-url" data-text="www.66629131.com">www.66629131.com</div></li>
-				<li><div class="sug-name" data-text="雅迪电动车官方">雅迪电动车官方</div>
-					<div class="sug-url" data-text="www.yadea.com.cn">www.yadea.com.cn</div></li>
-				<li><div class="sug-name" data-text="多多电子书">多多电子书</div>
-					<div class="sug-url" data-text="www.duoduomi.com">www.duoduomi.com</div></li>
-				<li><div class="sug-name" data-text="去读读电子书">去读读电子书</div>
-					<div class="sug-url" data-text="www.qududu.net">www.qududu.net</div></li>
 				<li><div class="sug-name" data-text="岛多多">岛多多</div>
 					<div class="sug-url" data-text="www.daododo.com">www.daododo.com</div></li>
 				<li><div class="sug-name" data-text="大家说网调地带">大家说网调地带</div>
 					<div class="sug-url" data-text="www.dajiashuo.com">www.dajiashuo.com</div></li>
 			</ul>
 		</div>
-	</div>
-	<!-- 推广专区 -->
-	<!-- File To Static Is Ok App=poseidon -->
 </body>
 </html>
