--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -74,7 +74,7 @@
 
 	//focus search action，when key space
 	$(document).keyup(function(e) {
-		if (e.keyCode == 32 && !$("#search").focus()) {
+		if (e.keyCode == 32 && document.activeElement.id!="search") {
 			$("#search").focus();
 		}
 	});
