--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -284,9 +284,7 @@
 			<li>网址可拖动调换位置并随意删除</li>
 			<li>点击重置可恢复到最最原始的页面</li>
 			<li>点击添加可自由添加您喜欢的网址</li>
-			<li>看在我们连logo都省了的份上，推荐给身边的屌丝们吧<!-- <br />版权归<a
-				href="http://www.cnblogs.com/luguo3000/">屌丝逆袭</a>所有 -->
-			</li>
+			<li>看在我们连logo都省了的份上，推荐给身边的屌丝们吧</li>
 			<li>期待您的任何建议： btoprunner@126.com</li>
 		</ol>
 		<a style="float: right; text-decoration: none;" href="#"
