--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -13,7 +13,7 @@
 	src="http://lib.sinaapp.com/js/jquery/1.10.2/jquery-1.10.2.min.js"></script>
 <script
 	src="http://lib.sinaapp.com/js/jquery-ui/1.10.2/jquery-ui.min.js"></script>
-<script src="js/jquery.cookie.js"></script>
+<script charset="utf-8" src="js/jquery.cookie.js"></script>
 <script>
 	/** trim() method for String */
 	String.prototype.trim = function() {
