--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -295,8 +295,8 @@
 			<li>网址可拖动调换位置并随意删除</li>
 			<li>点击重置可恢复到最最原始的页面</li>
 			<li>点击添加可自由添加您喜欢的网址</li>
-			<li>看在我们连logo都省了的份上，推荐给身边的屌丝们吧</li>
-			<li>期待您的任何建议： btoprunner@126.com</li>
+			<li>看在我们连logo都省了的份上，分享给身边的屌丝们吧</li>
+			<li>请关注<a href="#" style="color:red;">Simple上网导航</a>官方微博，我们一起努力</li>
 		</ol>
 		<a style="float: right; text-decoration: none;" href="#"
 			onclick="$('#about').hide('fast');">关闭</a>
