--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -208,7 +208,7 @@
 	<div>
 		<div id="head">
 			<a href="#" onclick="showAbout()">帮助</a> <a href="#"
-				onclick="reset()">重置</a> <a href="#" onclick="showAdd()">添加</a>
+				onclick="reset()">重置</a> <a href="#" onclick="showAdd()">添加</a><a id="break" href="http://mp.weixin.qq.com/s?__biz=MjM5NjAxOTU4MA==&amp;mid=275329283&amp;idx=1&amp;sn=f86a8a623f52004f816cd66c3cbcc191#rd" target="_blank" title="每天一篇正能量">歇会吧</a>
 		</div>
 		<div id="logo">Simple</div>
 		<div id="trashContainer">
